@@ -722,8 +722,8 @@ V_THEORA;Theora;Mk;V;;;;http://www.theora.org
 A_MPEG/L1;MPEG1/2 L1;Mk;A;MPEG-A;;MPEG1 or 2 Audio layer 1;http://www.iis.fraunhofer.de/amm/index.html
 A_MPEG/L2;MPEG1/2 L2;Mk;A;MPEG-A;;MPEG1 or 2 Audio layer 2;http://www.iis.fraunhofer.de/amm/index.html
 A_MPEG/L3;MPEG1/2 L3;Mk;A;MPEG-A;;MPEG1 or 2 Audio Layer 3;http://www.iis.fraunhofer.de/amm/index.html
-A_PCM/INT/BIG;PCM;Mk;A;;;;
-A_PCM/INT/LIT;PCM;Mk;A;;;;
+A_PCM/INT/BIG;PCM (Big unsigned);Mk;A;PCM;;Linear PCM (Big Endian);
+A_PCM/INT/LIT;PCM (Little unsigned);Mk;A;PCM;;Linear PCM (Little Endian);
 A_PCM/FLOAT/IEEE;FLOAT;Mk;A;;;Microsoft FLOAT;http://www.microsoft.com/windows/
 A_AC3;AC3;Mk;A;AC3;;Dolby AC3;
 A_AC3/BSID9;AC3;Mk;A;AC3;;Dolby AC3;
@@ -777,17 +777,17 @@ encv;Encrypted;4CC;V;;;Encrypted Video (3GPP);http://www.apple.com/quicktime/dow
 enca;Encrypted;4CC;A;;;Encrypted Audio (3GPP);http://www.apple.com/quicktime/download/standalone.html
 enct;Encrypted;4CC;T;;;Encrypted Text (3GPP);http://www.apple.com/quicktime/download/standalone.html
 ima4;IMA ADPCM;4CC;A;ADPCM;;;http://www.apple.com/quicktime/download/standalone.html
-raw ;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
-twos;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
-sowt;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
+raw ;PCM (Little unsigned);4CC;A;PCM;;;http://www.apple.com/quicktime/download/standalone.html
+twos;PCM (Big signed);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
+sowt;PCM (Little signed);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
 alac;Lossless;4CC;A;;;Apple Lossless Format (similar to FLAC);http://www.apple.com/quicktime/download/standalone.html
-sac3;AC3;4CC;A;;;AC3 in MP4 (made in Nero);http://www.nerodigital.com
-in24;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
-in32;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
-fl32;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
-fl64;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
-alaw;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
-ulaw;PCM;4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
+sac3;AC3;4CC;A;AC3;;AC3 in MP4 (made in Nero);http://www.nerodigital.com
+in24;PCM (Big unsigned);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
+in32;PCM (Big unsigned);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
+fl32;PCM (Float);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
+fl64;PCM (Float);4CC;A;;;;http://www.apple.com/quicktime/download/standalone.html
+alaw;A-law;4CC;A;A-law;;;http://www.apple.com/quicktime/download/standalone.html
+ulaw;U-Law;4CC;A;U-Law;;;http://www.apple.com/quicktime/download/standalone.html
 .mp3;MPEG-1/2 L3;2CC;A;MPEG-A;;MPEG-1 or 2 layer 3;http://www.iis.fraunhofer.de/amm/index.html
 MPEG-4 AAC main;AAC Main;Mp4v2;A;AAC;;;
 MPEG-4 AAC LC;AAC LC;Mp4v2;A;AAC;;;
@@ -814,13 +814,13 @@ ALS;ALS;MediaInfo;A;;;MPEG-4 Audio Lossless Coding;http://www.nue.tu-berlin.de/f
 Vodei;Vodei MP;MediaInfo;V;;;Video On Demand Exploration Interface;http://www.vodei.com
 SWF ADPCM;SWF ADPCM;MediaInfo;A;ADPCM;;ADPCM found in SWF/FLV files;http://www.adobe.com
 0;Unknown;2CC;A;;;;
-1;PCM;2CC;A;PCM;;Microsoft PCM;http://www.microsoft.com/windows/
+1;PCM (Little unsigned);2CC;A;PCM;;Microsoft PCM;http://www.microsoft.com/windows/
 2;Microsoft ADPCM;2CC;A;ADPCM;;Microsoft ADPCM;http://www.microsoft.com/windows/
-3;FLOAT;2CC;A;;;IEEE FLOAT;http://www.microsoft.com/windows/
+3;PCM (Float);2CC;A;PCM;;IEEE FLOAT;http://www.microsoft.com/windows/
 4;VSELP;2CC;A;;;Compaq VSELP;
 5;CVSD;2CC;A;;;IBM CVSD;
-6;A-Law;2CC;A;;;CCITT A-Law;http://www.microsoft.com/windows/
-7;U-Law;2CC;A;;;CCITT U-Law;http://www.microsoft.com/windows/
+6;A-Law;2CC;A;A-Law;;CCITT A-Law;http://www.microsoft.com/windows/
+7;U-Law;2CC;A;U-Law;;CCITT U-Law;http://www.microsoft.com/windows/
 8;DTS;2CC;A;DTS;;;
 9;DRM;2CC;A;;;Microsoft;
 A;WMSpeech;2CC;A;;;;
